--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.1",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "dev": "nodemon src/server.js",
