--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.12",
     "multer": "^1.4.2",
     "pg": "^7.12.1",
     "sequelize": "^5.21.2",
