--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "date-fns": "^2.7.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
     "multer": "^1.4.2",
+    "nodemailer": "^6.3.1",
+    "nodemailer-express-handlebars": "^3.1.0",
     "pg": "^7.12.1",
     "sequelize": "^5.21.2",
     "yup": "^0.27.0"
