--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
+    "@sentry/node": "5.9.0",
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.2.2",
+    "cors": "^2.8.5",
     "date-fns": "^2.7.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
@@ -12,6 +16,8 @@
     "nodemailer-express-handlebars": "^3.1.0",
     "pg": "^7.12.1",
     "sequelize": "^5.21.2",
+    "yar": "^9.1.0",
+    "youch": "^2.0.10",
     "yup": "^0.27.0"
   },
   "scripts": {
